Saral-OneClick/Saral-Automation/Monitoring-Stack/21-ec2.tf
resource "aws_security_group" "my_app" {
  name        = "my-app"
  description = "Allow My App Access"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Allow Node Exporter Access"
    from_port       = 9100
    to_port         = 9100
    protocol        = "tcp"
    security_groups = [aws_eks_cluster.cluster.vpc_config[0].cluster_security_group_id]
  }

  ingress {
    description = "Allow SSH Access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "ubuntu_instance" {
  ami                    = "ami-0a1b648e2cd533174"  # Ubuntu 20.04 LTS AMI ID
  instance_type          = "t3.medium"
  key_name               = var.ssh_key
  subnet_id              = aws_subnet.public-subnet-a.id
#  vpc_security_group_ids = [aws_security_group.my_app.id]
  vpc_security_group_ids = [aws_eks_cluster.cluster.vpc_config[0].cluster_security_group_id]
  root_block_device {
    volume_size = var.storage_size_gb  # Storage size in gigabytes
  }
  user_data = <<EOF
#!/bin/bash

sudo -s
useradd --system --no-create-home --shell /bin/false node_exporter
wget https://github.com/prometheus/node_exporter/releases/download/v1.3.1/node_exporter-1.3.1.linux-amd64.tar.gz
tar -xvf node_exporter-1.3.1.linux-amd64.tar.gz
mv node_exporter-1.3.1.linux-amd64/node_exporter /usr/local/bin/

cat <<EOT >> /etc/systemd/system/node_exporter.service
[Unit]
Description=Node Exporter
Wants=network-online.target
After=network-online.target

StartLimitIntervalSec=500
StartLimitBurst=5

[Service]
User=node_exporter
Group=node_exporter
Type=simple
Restart=on-failure
RestartSec=5s
ExecStart=/usr/local/bin/node_exporter

[Install]
WantedBy=multi-user.target
EOT

systemctl enable node_exporter
systemctl start node_exporter
EOF

  tags = {
    Name          = "My App"
    node-exporter = "true"
  }
  depends_on = [aws_eks_node_group.private-nodes]
}

variable "storage_size_gb" {
  description = "Desired storage size in gigabytes"
  default     = 100
}
